# xiucai

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py
app/templates/: base.html
xiucai/: __init__.py
xiucai/templates/: base.html  index.html
