[tool.poetry]
name = "xiucai"
version = "0.1.0"
description = ""
authors = ["Harry Hsu <h@stmharry.io"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
linkpreview = "^0.6.0"
bootstrap-flask = "^2.2.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
